--- a/photos.html
+++ b/photos.html
@@ -1,10 +1,8 @@
 <!DOCTYPE hmtl>
 <html>
-	<?php include("menu.php");?>
 	<head>
 		<title>Photo Gallery</title>
 		<link rel="stylesheet" href="styles.css">
-		<link rel="" href="index2.html">
 	</head>
 	<header>
 		<figure>
@@ -13,53 +11,116 @@
 		<nav>
 			<ul>
 				<li><a href="index2.html">Home</a></li>
-				<li><a href="aboutme.html">About Me</a></li>
 				<li><a href="photos.html">Photo Gallery</a></li>
 			</ul>
 		</nav>
 	</header>
 	<body>
-		<h1>2014 in Review</h1>
-		<h2>California<h2>
+		<div class="left"> Landscapes:
+			<section class="submenu"> 
+				<a href="#California"> California </a>
+				<a href="#NewYork">NewYork</a>
+				<a href="#Chicago"> Chicago </a>
+				<a href="#Disney"> Disneyland </a>
+				<!--<a href="#California"> California </a> |
+				<a href="#California"> California </a> |-->
+			</section><br>
+		College:
+			<section class="submenu">
+				<a href="#first"> FirstYear </a>
+			</section><br>
+		HighSchool:
+			<section class="submenu">
+				<a href="#grad"> Graduation </a>
+				<a href="#senior"> SeniorYear </a>
+			</section>
+		</div>
+		<h2 id="California">California<h2>
 		<figure>
-			<img src="2014/sunsets/1.jpg"/>
-			<img src="2014/sunsets/2.jpg"/>
-			<img src="2014/sunsets/3.jpg"/>
-			<img src="2014/sunsets/4.jpg"/>
-			<img src="2014/sunsets/5.jpg"/>
-			<img src="2014/sunsets/6.jpg"/>
-			<img src="2014/sunsets/7.jpg"/>
-			<img src="2014/sunsets/8.jpg"/>
-			<img src="2014/sunsets/9.jpg"/>
-			<img src="2014/sunsets/11.jpg"/>
-			<img src="2014/sunsets/12.jpg"/>
-			<img src="2014/sunsets/13.jpg"/>
+			<img src="images/sunsets/1.jpg"/>
+			<img src="images/sunsets/2.jpg"/>
+			<img src="images/sunsets/3.JPG"/>
+			<img src="images/sunsets/4.JPG"/>
+			<img src="images/sunsets/5.JPG"/>
+			<img src="images/sunsets/6.JPG"/>
+			<img src="images/sunsets/7.jpg"/>
+			<img src="images/sunsets/8.jpg"/>
+			<img src="images/sunsets/9.jpg"/>
+			<img src="images/sunsets/11.jpg"/>
+			<img src="images/sunsets/12.jpg"/>
+			<img src="images/sunsets/13.jpg"/>
 		</figure>
-		<h2>New York City<h2>
+		<h2 id="NewYork">New York City<h2>
 		<figure>
-			<img src="2014/sunsets/NewYork/1.jpg"/>
-			<img src="2014/sunsets/NewYork/2.jpg"/>
-			<img src="2014/sunsets/NewYork/3.jpg"/>
-			<img src="2014/sunsets/NewYork/4.jpg"/>
-			<img src="2014/sunsets/NewYork/5.jpg"/>
-			<img src="2014/sunsets/NewYork/6.jpg"/>
-			<img src="2014/sunsets/NewYork/7.jpg"/>
-			<img src="2014/sunsets/NewYork/8.jpg"/>
-			<img src="2014/sunsets/NewYork/9.jpg"/>
-			<img src="2014/sunsets/NewYork/10.jpg"/>
-			<img src="2014/sunsets/NewYork/11.jpg"/>
+			<img src="images/NewYork/1.jpg"/>
+			<img src="images/NewYork/2.jpg"/>
+			<img src="images/NewYork/3.jpg"/>
+			<img src="images/NewYork/4.jpg"/>
+			<img src="images/NewYork/5.jpg"/>
+			<img src="images/NewYork/6.jpg"/>
+			<img src="images/NewYork/7.jpg"/>
+			<img src="images/NewYork/8.jpg"/>
+			<img src="images/NewYork/9.jpg"/>
+			<img src="images/NewYork/10.jpg"/>
+			<img src="images/NewYork/11.jpg"/>
 		</figure>
-		<h2>Chicago<h2>
+		<h2 id="Chicago">Chicago<h2>
 		<figure>
-			<img src="2014/sunsets/Chicago/1.jpg"/>
-			<img src="2014/sunsets/Chicago/2.jpg"/>
-			<img src="2014/sunsets/Chicago/3.jpg"/>
+			<img src="images/Chicago/1.jpg"/>
+			<img src="images/Chicago/2.jpg"/>
+			<img src="images/Chicago/3.jpg"/>
 		</figure>
-		<h2>Disneyland<h2>
+		<h2 id="Disney">Disneyland<h2>
 		<figure>
-			<img src="2014/DisneyLand/family.jpg"/>
-			<img src="2014/DisneyLand/sunset.jpg"/>
-			<img src="2014/DisneyLand/night.jpg"/>
+			<img src="images/DisneyLand/family.jpg"/>
+			<img src="images/DisneyLand/sunset.jpg"/>
+			<img src="images/DisneyLand/night.jpg"/>
+		</figure>
+		<h2 id="first"> First Year </h2>
+		<figure>
+			<img src="images/first/christmas.jpg"/>
+			<img src="images/first/christmas2.JPG"/>
+			<img src="images/first/millie.jpg"/>
+			<img src="images/first/basketball.JPG"/>
+			<img src="images/first/roaree.JPG"/>
+			<img src="images/first/bean.jpg"/>
+			<img src="images/first/bean3.jpg"/>
+			<img src="images/first/penguin.jpg"/>
+			<img src="images/first/artinst.jpg"/>
+			<img src="images/first/halloween.jpg"/>
+			<img src="images/first/halloween2.jpg"/>
+			<img src="images/first/lexbirthday.jpg"/>
+			<img src="images/first/lexbirthday2.jpg"/>
+			<img src="images/first/bestfriends.jpg"/>
+			<img src="images/first/lex.jpg"/>
+			<img src="images/first/mels.jpg"/>
+			<img src="images/first/washington.jpg"/>
+			<img src="images/first/zabars.JPG"/>
+			<img src="images/first/alma2.jpg"/>
+			<img src="images/first/lauren.jpg"/>
+			<img src="images/first/alma.jpg"/>
+		</figure>
+		<h2 id="grad"> Graduation </h2>
+		<figure>
+			<img src="images/Graduation/grad1.jpg"/>
+			<img src="images/Graduation/barnard.JPG"/>
+			<img src="images/Graduation/court.JPG"/>
+			<img src="images/Graduation/pooja2.JPG"/>
+			<img src="images/Graduation/parents.jpg"/>
+		</figure>
+		<h2 id="senior"> Senior Year </h2>
+		<figure>
+			<img src="images/Senior/beyonce.jpg"/>
+			<img src="images/Senior/pixar.JPG"/>
+			<img src="images/Senior/pixarball.jpg"/>
+			<img src="images/Senior/lamp.JPG"/>
+			<img src="images/Senior/aliens.jpg"/>
+			<img src="images/Senior/prom2.JPG"/>
+			<img src="images/Senior/dinner.jpg"/>
+			<img src="images/Senior/diwali.jpg"/>
+			<img src="images/Senior/napa.jpg"/>
+			<img src="images/Senior/napa2.jpg"/>
+			<img src="images/Senior/grace.jpg"/>
 		</figure>
 	</body>
 </html>
