--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,5 @@
 <!DOCTYPE hmtl>
 <html>
-	<?php include("menu.php");?>
 	<head>
 		<title>Jocelyn Cheng</title>
 		<link rel="stylesheet" href="styles.css">
@@ -12,20 +11,18 @@
 		<nav>
 			<ul>
 				<li><a href="index2.html">Home</a></li>
-				<li><a href="aboutme.html">About Me</a></li>
 				<li><a href="photos.html">Photo Gallery</a></li>
 			</ul>
 		</nav>
 	</header>
 	<body>
 		<div>
-			<p> Hello! My name is Jocelyn! I am currently attending Barnard College in the city of New York. You can follow me on <a href="https://instagram.com/joceyjocejoce/" target="_blank">instagram</a> here. If you would like to also receive weekly emails, please sign up here!</p>
-			<p><input></input>  <button>enter</button></p>
+			<p> Hello! My name is Jocelyn! I am currently attending Barnard College in the city of New York.</a> here.</p>
 		</div>
 		<footer>
-			<a href="https://www.facebook.com/joce.cheng">Facebook</a> |
 			<a href="https://instagram.com/joceyjocejoce/">Instagram</a> |
-			<a href="#">LinkedIn</a>
+			<a href="mailto:jocelyn.cheng367@gmail.com">Email</a>
+			<!--<a href="#">LinkedIn</a>-->
 		</footer>
 	</body>
 </html>
