individual pages for photo galleries

--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
 	</header>
 	<body>
 		<div>
-			<p> Hello! My name is Jocelyn! I am currently attending Barnard College in the city of New York.</a> here.</p>
+			<p> Hello! My name is Jocelyn! I am currently attending Barnard College in the city of New York.</p>
 		</div>
 		<footer>
 			<a href="https://instagram.com/joceyjocejoce/">Instagram</a> |
