--- a/photos.html
+++ b/photos.html
@@ -35,8 +35,8 @@
 				<a href="#senior"> SeniorYear </a>
 			</section>
 		</div>
-		<h2 id="California">California<h2>
-		<figure>
+		<div id="California">
+			<h2>California<h2>
 			<img src="images/sunsets/1.jpg"/>
 			<img src="images/sunsets/2.jpg"/>
 			<img src="images/sunsets/3.JPG"/>
@@ -49,9 +49,9 @@
 			<img src="images/sunsets/11.jpg"/>
 			<img src="images/sunsets/12.jpg"/>
 			<img src="images/sunsets/13.jpg"/>
-		</figure>
-		<h2 id="NewYork">New York City<h2>
-		<figure>
+		</div>
+		<div id="NewYork">
+			<h2>New York City<h2>
 			<img src="images/NewYork/1.jpg"/>
 			<img src="images/NewYork/2.jpg"/>
 			<img src="images/NewYork/3.jpg"/>
@@ -63,21 +63,21 @@
 			<img src="images/NewYork/9.jpg"/>
 			<img src="images/NewYork/10.jpg"/>
 			<img src="images/NewYork/11.jpg"/>
-		</figure>
-		<h2 id="Chicago">Chicago<h2>
-		<figure>
+		</div>
+		<div id="Chicago">
+			<h2>Chicago<h2>
 			<img src="images/Chicago/1.jpg"/>
 			<img src="images/Chicago/2.jpg"/>
 			<img src="images/Chicago/3.jpg"/>
-		</figure>
-		<h2 id="Disney">Disneyland<h2>
-		<figure>
+		</div>
+		<div id="Disney">
+			<h2>Disneyland<h2>
 			<img src="images/DisneyLand/family.jpg"/>
 			<img src="images/DisneyLand/sunset.jpg"/>
 			<img src="images/DisneyLand/night.jpg"/>
-		</figure>
-		<h2 id="first"> First Year </h2>
-		<figure>
+		</div>
+		<div id="first">
+			<h2> First Year </h2>
 			<img src="images/first/christmas.jpg"/>
 			<img src="images/first/christmas2.JPG"/>
 			<img src="images/first/millie.jpg"/>
@@ -99,17 +99,17 @@
 			<img src="images/first/alma2.jpg"/>
 			<img src="images/first/lauren.jpg"/>
 			<img src="images/first/alma.jpg"/>
-		</figure>
-		<h2 id="grad"> Graduation </h2>
-		<figure>
+		</div>
+		<div id="grad">
+			<h2> Graduation </h2>
 			<img src="images/Graduation/grad1.jpg"/>
 			<img src="images/Graduation/barnard.JPG"/>
 			<img src="images/Graduation/court.JPG"/>
 			<img src="images/Graduation/pooja2.JPG"/>
 			<img src="images/Graduation/parents.jpg"/>
-		</figure>
-		<h2 id="senior"> Senior Year </h2>
-		<figure>
+		</div>
+		<div id="senior">
+			<h2> Senior Year </h2>
 			<img src="images/Senior/beyonce.jpg"/>
 			<img src="images/Senior/pixar.JPG"/>
 			<img src="images/Senior/pixarball.jpg"/>
@@ -121,6 +121,6 @@
 			<img src="images/Senior/napa.jpg"/>
 			<img src="images/Senior/napa2.jpg"/>
 			<img src="images/Senior/grace.jpg"/>
-		</figure>
+		</div>
 	</body>
 </html>
