--- a/photos.html
+++ b/photos.html
@@ -16,23 +16,51 @@
 		</nav>
 	</header>
 	<body>
-		<div class="left"> Landscapes:
+		<span>
+			<h2>California</h2>
+			<a href="california.html"><img src="images/sunsets/2.jpg"></a>
+		</span>
+		<span>
+			<h2>New York</h2>
+			<a href="newyork.html"><img src="images/NewYork/9.jpg"></a>
+		</span>
+		<span>
+			<h2>Chicago</h2>
+			<a href="chicago.html"><img src="images/Chicago/3.jpg"></a>
+		</span>
+		<span>
+			<h2>Disneyland</h2>
+			<a href="disney.html"><img src="images/DisneyLand/sunset.jpg"></a>
+		</span>
+		<span>
+			<h2>First Year</h2>
+			<a href="first.html"><img src="images/first/alma2.jpg"></a>
+		</span>
+		<span>
+			<h2>Graduation</h2>
+			<a href="grad.html"><img src="images/Graduation/barnard.jpg"></a>
+		</span>
+		<span id="last">
+			<h2>Senior Year</h2>
+			<a href="senior.html"><img src="images/Senior/pixar.jpg"></a>
+		</span>
+		<!-- <div class="left"> Landscapes:
 			<section class="submenu"> 
-				<a href="#California"> California </a>
-				<a href="#NewYork">NewYork</a>
-				<a href="#Chicago"> Chicago </a>
-				<a href="#Disney"> Disneyland </a>
-				<!--<a href="#California"> California </a> |
-				<a href="#California"> California </a> |-->
+				<a href="california.html"> California </a>
+				<a href="newyork.html">NewYork</a>
+				<a href="chicago.html"> Chicago </a>
+				<a href="disney.html"> Disneyland </a>
+				<a href="#California"> California </a> |
+				<a href="#California"> California </a> |
 			</section><br>
 		College:
 			<section class="submenu">
-				<a href="#first"> FirstYear </a>
+				<a href="first.html"> FirstYear </a>
 			</section><br>
 		HighSchool:
 			<section class="submenu">
-				<a href="#grad"> Graduation </a>
-				<a href="#senior"> SeniorYear </a>
+				<a href="grad.html"> Graduation </a>
+				<a href="senior.html"> SeniorYear </a>
 			</section>
 		</div>
 		<div id="California">
@@ -121,6 +149,6 @@
 			<img src="images/Senior/napa.jpg"/>
 			<img src="images/Senior/napa2.jpg"/>
 			<img src="images/Senior/grace.jpg"/>
-		</div>
+		</div>-->
 	</body>
 </html>
