--- a/index2.html
+++ b/index2.html
@@ -19,6 +19,16 @@
 		<div>
 			<p><b> Hello! My name is Jocelyn! I am currently attending Barnard College in the city of New York.</b></p>
 		</div>
+		<div id="blogposts">
+			<div>
+				<h2>My First Year at College:</h2>
+				<!-- <h3>March 11, 2015</h3> -->
+				<p>asfk</p>
+			</div><br><br>
+			<div>
+				<h2>High School</h2>
+			</div>
+		</div>
 		<footer>
 			<a href="https://instagram.com/joceyjocejoce/">Instagram</a> |
 			<a href="mailto:jocelyn.cheng367@gmail.com">Email</a>
